--- a/testdata/fixtures/cani/configs/canitest_valid_inactive.yml
+++ b/testdata/fixtures/cani/configs/canitest_valid_inactive.yml
@@ -33,24 +33,27 @@ session:
             baseurlsls: https://localhost:8443/apis/sls/v1
             baseurlhsm: https://localhost:8443/apis/smd/hsm/v2
             secretname: admin-client-auth
+            k8spodscidr: 10.32.0.0/12
+            k8sservicescidr: 10.16.0.0/12
             kubeconfig: ""
-            tokenhost: ""
+            providerhost: localhost:8443
             cacertpath: ""
             validroles:
+                - Storage
+                - Management
                 - Compute
                 - Service
                 - System
                 - Application
-                - Storage
-                - Management
             validsubroles:
-                - Worker
-                - Master
-                - Storage
                 - UAN
                 - Gateway
                 - LNETRouter
                 - Visualization
                 - UserDefined
+                - Master
+                - Worker
+                - Storage
+        custom_hardware_types_dir: ./hardware-types
     domain: {}
     active: false
