--- a/testdata/fixtures/cani/configs/my_custom_hw.yml
+++ b/testdata/fixtures/cani/configs/my_custom_hw.yml
@@ -21,39 +21,37 @@
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
 #
-session:
-    domain_options:
-        datastore_path: ./canitestdb.json
-        log_file_path: ./canitestdb.log
-        provider: csm
-        csm_options:
-            usesimulation: true
-            insecureskipverify: true
-            apigatewaytoken: ""
-            baseurlsls: https://localhost:8443/apis/sls/v1
-            baseurlhsm: https://localhost:8443/apis/smd/hsm/v2
-            secretname: admin-client-auth
-            k8spodscidr: 10.32.0.0/12
-            k8sservicescidr: 10.16.0.0/12
-            kubeconfig: ""
-            providerhost: localhost:8443
-            cacertpath: ""
-            validroles:
-                - Storage
-                - Management
-                - Compute
-                - Service
-                - System
-                - Application
-            validsubroles:
-                - UAN
-                - Gateway
-                - LNETRouter
-                - Visualization
-                - UserDefined
-                - Master
-                - Worker
-                - Storage
-        custom_hardware_types_dir: ./hardware-types
-    domain: {}
-    active: true
+---
+manufacturer: HPE
+model: EX2000
+hardware-type: Cabinet
+slug: my-custom-cabinet
+
+device-bays:
+  - name: Chassis 0
+    allowed:
+      slug: [my-custom-chassis]
+    default:
+      slug: my-custom-chassis
+    ordinal: 0
+
+provider_defaults:
+  csm:
+    Class: River
+    Ordinal: 4321
+    StartingHmnVlan: 1111
+    EndingHmnVlan: 1769
+
+---
+manufacturer: HPE
+model: Standard/EIA Chassis
+hardware-type: Chassis
+slug: my-custom-chassis
+
+provider_defaults:
+  csm:
+    Class: River
+    starting_cabinet: 4321
+    StartingHmnVlan: 1111
+    EndingHmnVlan: 1769
+
