--- a/.github/workflows/promote-prerelease.yml
+++ b/.github/workflows/promote-prerelease.yml
@@ -1,7 +1,7 @@
 #
 # MIT License
 #
-# (C) Copyright 2023 Hewlett Packard Enterprise Development LP
+# (C) Copyright 2023-2024 Hewlett Packard Enterprise Development LP
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -71,8 +71,8 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: '1.20' # The Go version to download (if necessary) and use.
-  
-    # generate updated docs from any changes made to cani codebase
+
+      # generate updated docs from any changes made to cani codebase
     - run: go run main.go makedocs
 
     - name: Set up Python
@@ -102,4 +102,3 @@ jobs:
     - name: list doc versions 🚀
       run: |
         mike list -F mkdocs.yml -b gh-pages
-        
